general clean up + update of the swagger file (#30)
